--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-- name: Publish With Poetry
+jobs:
+  -name: Publish With Poetry
   # You may pin to the exact commit or the version.
   # uses: celsiusnarhwal/poetry-publish@fab19c2cf01932f0fbe9b879496111043896bf21
   uses: celsiusnarhwal/poetry-publish@v2.0.2
@@ -23,9 +24,8 @@
     token: ${{ secrets.PYPI_API_TOKEN }} # optional, default is 
     # Whether to build the package before publishing it. Defaults to "true".
     build: # optional, default is true
-    # The format to build the package in. Must be either "sdist" or "wheel". Both formats will be built if this isn't
-specified.
+    # The format to build the package in. Must be either "sdist" or "wheel". Both formats will be built if this isn't specified.
 
     build-format: # optional, default is 
-    
+
     extra_build_dependency_packages: "pygame"
