--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,13 @@
+name: Python package
 on:
   release:
     types: [published]
-    jobs:
-      name: "Publish With Poetry"
-      uses: celsiusnarhwal/poetry-publish@v2.0.2
-      with:
-        token: ${{ secrets.PYPI_API_TOKEN }} # optional, default is 
-        extra_build_dependency_packages: "pygame"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and publish to pypi
+        uses: JRubics/poetry-publish@v1.16
+        with:
+          pypi_token: ${{ secrets.PYPI_API_TOKEN }}
