--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: Python package
 on:
-  release:
-    types: [published]
+  pull_request:
+    branches: 
+      - master
+    types: [closed]
 jobs:
   build:
     runs-on: ubuntu-latest
