--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,11 @@ on:
     types: [closed]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows 11
     steps:
+      - name: Upgrade pip
+        run: |
+          "python -m pip install --upgrade pip"
       - uses: actions/checkout@v2
       - name: Build and publish to pypi
         uses: JRubics/poetry-publish@v1.16
