fixed workflow config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,8 +7,10 @@ tag = True
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:part]
-pre-release = a  # For alpha pre-releases
+[bumpversion:part:release]
+optional_value = release
+first_value = 0
 
-[bumpversion:part]
-release = stable
+[bumpversion:part:pre-release]
+optional_value = a
+first_value = 1
