--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Set up Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
