--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,23 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-
 [project]
 name = "batframework"
 version = "1.0.8"
+authors = [
+    { name = "Turan Baturay", email = "baturayturan@gmail.com" }
+]
 description = "Pygame framework for making games easier."
 readme = "README.md"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent"
+]
 requires-python = ">=3.10"
-dependencies = ["pygame-ce"]
+dependencies = [
+    "pygame-ce"
+]
+
+[project.urls]
+homepage = "https://github.com/TuranBaturay/batFramework"
