--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'  # or '3.10'
 
       - name: Set up Git
         run: |
