--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -1,4 +1,4 @@
-name: Publish Stable Release to PyPI
+name: Release Workflow
 
 on:
   push:
@@ -6,10 +6,8 @@ on:
       - master
 
 jobs:
-  publish:
-    name: Publish Stable Release
+  bump-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,39 +15,25 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'  # or '3.10'
-
-      - name: Set up Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          python-version: 3.11
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install bump2version build twine
+        run: pip install bump-my-version build twine
+
+      - name: Show pyproject.toml before version bump
+        run: cat pyproject.toml
 
       - name: Bump stable release version
-        run: bump2version release  # Automatically increments stable release version
+        run: bump-my-version patch
 
-      - name: Display pyproject.toml
+      - name: Show pyproject.toml after version bump
         run: cat pyproject.toml
-      
 
-      - name: Build package
+      - name: Build the package
         run: python -m build
 
-      - name: Publish to PyPI
+      - name: Upload to PyPI
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload dist/*
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ steps.bump_version.outputs.new_version }}
-          name: "Release ${{ steps.bump_version.outputs.new_version }}"
-          body: "Automated stable release"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python -m twine upload dist/*
