--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -26,11 +26,16 @@ jobs:
           jq ".version = \"${{ inputs.version }}\"" src/batFramework/version_master.json > src/batFramework/version_master.json.tmp
           mv src/batFramework/version_master.json.tmp src/batFramework/version_master.json
 
-      - name: Commit version update
+      - name: Update version in pyproject.toml
+        run: |
+          echo "Updating pyproject.toml version to ${{ inputs.version }}"
+          sed -i "s/^version = .*/version = \"${{ inputs.version }}\"/" pyproject.toml
+
+      - name: Commit version updates
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add src/batFramework/version_master.json
+          git add src/batFramework/version_master.json pyproject.toml
           git commit -m "Update master version to ${{ inputs.version }}"
           git push origin master
 
