--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -20,11 +20,11 @@ jobs:
         with:
           ref: dev  # Ensure it checks out the dev branch
 
-      - name: Update version in version_dev.json
+      - name: Update version in version.json
         run: |
           echo "Updating dev version to ${{ inputs.version }}"
-          jq ".version = \"${{ inputs.version }}\"" src/batFramework/version_dev.json > src/batFramework/version_dev.json.tmp
-          mv src/batFramework/version_dev.json.tmp src/batFramework/version_dev.json
+          jq ".version = \"${{ inputs.version }}\"" src/batFramework/version.json > src/batFramework/version.json.tmp
+          mv src/batFramework/version.json.tmp src/batFramework/version.json
 
       - name: Update version in pyproject.toml
         run: |
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add src/batFramework/version_dev.json pyproject.toml
+          git add src/batFramework/version.json pyproject.toml
           git commit -m "Update dev version to ${{ inputs.version }}"
           git push origin dev
 
