--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -39,6 +39,11 @@ jobs:
           git commit -m "Update dev version to ${{ inputs.version }}"
           git push origin dev
 
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
       - name: Build and publish to Test PyPI
         run: |
           python -m build
