--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -39,6 +39,11 @@ jobs:
           git commit -m "Update master version to ${{ inputs.version }}"
           git push origin master
 
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
       - name: Build and publish to PyPI
         run: |
           python -m build
