--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -20,24 +20,28 @@ jobs:
         with:
           ref: master  # Ensure it checks out the master branch
 
-      - name: Update version in version_master.json
+      - name: Update version in version.json
         run: |
           echo "Updating master version to ${{ inputs.version }}"
-          jq ".version = \"${{ inputs.version }}\"" src/batFramework/version_master.json > src/batFramework/version_master.json.tmp
-          mv src/batFramework/version_master.json.tmp src/batFramework/version_master.json
+          jq ".version = \"${{ inputs.version }}\"" src/batFramework/version.json > src/batFramework/version.json.tmp
+          mv src/batFramework/version.json.tmp src/batFramework/version.json
 
       - name: Update version in pyproject.toml
         run: |
           echo "Updating pyproject.toml version to ${{ inputs.version }}"
           sed -i "s/^version = .*/version = \"${{ inputs.version }}\"/" pyproject.toml
 
-      - name: Commit version updates
+      - name: Commit version updates if changed
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add src/batFramework/version_master.json pyproject.toml
-          git commit -m "Update master version to ${{ inputs.version }}"
-          git push origin master
+          git add src/batFramework/version.json pyproject.toml
+          if ! git diff --cached --quiet; then
+            git commit -m "Update dev version to ${{ inputs.version }}"
+            git push origin dev
+          else
+            echo "No version changes to commit. Skipping push."
+          fi
 
       - name: Install build dependencies
         run: |
