--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -46,7 +46,8 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build twine
+          pip install build
+          pip install twine==6.0.1
 
       - name: Build and publish to PyPI
         run: |
