--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -37,11 +37,12 @@ jobs:
           git config user.email "actions@github.com"
           git add src/batFramework/version.json pyproject.toml
           if ! git diff --cached --quiet; then
-            git commit -m "Update dev version to ${{ inputs.version }}"
-            git push origin dev
+            git commit -m "Update master version to ${{ inputs.version }}"
+            git push origin master
           else
             echo "No version changes to commit. Skipping push."
           fi
+
 
       - name: Install build dependencies
         run: |
