--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
           if [[ "${{ steps.version_type.outputs.type }}" == "stable" ]]; then
             cz bump --yes
           else
-            cz bump --yes --prerelease dev
+            cz bump --yes --prerelease alpha
           fi
           echo "version=$(cz version --project)" >> $GITHUB_OUTPUT
 
