--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,14 @@ dependencies=[
 
 [project.urls]
 "Homepage" = "https://github.com/TuranBaturay/batFramework"
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "1.1.0"
+tag_format = "v$version"
+update_changelog_on_bump = true
+changelog_file = "CHANGELOG.md"
+version_files = [
+  "pyproject.toml:version",
+  "src/batFramework/version.json:version"
+]
