--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,16 +6,6 @@ on:
       - master
       - dev
   workflow_dispatch:
-    inputs:
-      release_type:
-        description: "Type of release"
-        required: false
-        default: "auto"
-        type: choice
-        options:
-          - auto
-          - stable
-          - prerelease
 
 jobs:
   release:
@@ -23,7 +13,7 @@ jobs:
 
     permissions:
       contents: write
-      id-token: write  # for PyPI trusted publishing
+      id-token: write
 
     env:
       BRANCH_NAME: ${{ github.ref_name }}
@@ -51,62 +41,9 @@ jobs:
       - name: Determine release type
         id: version_type
         run: |
-          if [[ "${{ github.event.inputs.release_type }}" != "auto" ]]; then
-            echo "type=${{ github.event.inputs.release_type }}" >> $GITHUB_OUTPUT
-          elif [[ "$BRANCH_NAME" == "master" ]]; then
+          if [[ "$BRANCH_NAME" == "master" ]]; then
             echo "type=stable" >> $GITHUB_OUTPUT
           else
             echo "type=prerelease" >> $GITHUB_OUTPUT
           fi
           echo "Release type: $(cat $GITHUB_OUTPUT)"
-
-      - name: Bump version with Commitizen
-        id: bump
-        run: |
-          if [[ "${{ steps.version_type.outputs.type }}" == "stable" ]]; then
-            cz bump --yes
-          else
-            cz bump --yes --prerelease alpha
-          fi
-          echo "version=$(cz version --project)" >> $GITHUB_OUTPUT
-
-      - name: Push version bump
-        run: |
-          git push
-          git push --tags
-
-      - name: Build package
-        run: python -m build
-
-      - name: Publish to PyPI (stable + prerelease)
-        uses: pypa/gh-action-pypi-publish@release/v1
-
-      - name: Extract latest changelog entry
-        id: changelog
-        run: |
-          START_LINE=$(grep -n "## v${{ steps.bump.outputs.version }}" CHANGELOG.md | cut -d: -f1)
-          END_LINE=$(tail -n +$((START_LINE+1)) CHANGELOG.md | grep -n "## v" | head -n1 | cut -d: -f1)
-          if [ -z "$START_LINE" ]; then
-            echo "No changelog section found for version."
-            echo "notes=No changelog found." >> $GITHUB_OUTPUT
-          else
-            if [ -z "$END_LINE" ]; then
-              END_LINE=$(wc -l < CHANGELOG.md)
-            else
-              END_LINE=$((START_LINE + END_LINE))
-            fi
-            sed -n "${START_LINE},${END_LINE}p" CHANGELOG.md | tail -n +2 > tmp_notes.txt
-            echo "notes<<EOF" >> $GITHUB_OUTPUT
-            cat tmp_notes.txt >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ steps.bump.outputs.version }}
-          name: Release v${{ steps.bump.outputs.version }}
-          body: ${{ steps.changelog.outputs.notes }}
-          draft: false
-          prerelease: ${{ steps.version_type.outputs.type == 'prerelease' }}
-          files: dist/*
