fix: updated toml for version_provider

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies=[
 
 [tool.commitizen]
 name = "cz_conventional_commits"
+version_provider = "pep621"
 tag_format = "v$version"
 update_changelog_on_bump = true
 changelog_file = "CHANGELOG.md"
