--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "batframework"
-version = "1.1.0"
+version = "1.0.9"
 license = { file = "LICENSE" }
 authors = [
     { name="Turan Baturay", email="baturayturan@gmail.com" }
@@ -27,7 +27,7 @@ dependencies=[
 [tool.commitizen]
 name = "cz_conventional_commits"
 version_provider = "pep621"
-tag_format = "v$version"
+tag_format = "$version"
 update_changelog_on_bump = true
 changelog_file = "CHANGELOG.md"
 version_files = [
