set pygame-ce>=2.5.2, clean debug prints, update changelog

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 requires-python = ">=3.11"
 dependencies=[
-    "pygame-ce"
+    "pygame-ce>=2.5.2"
 ]
 [project.urls]
 Homepage = "https://github.com/TuranBaturay/batFramework"
